// Copyright 2024 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     https://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";
package datacommons.v3;

option go_package = "github.com/datacommonsorg/mixer/internal/proto/v3";

import "v2/observation.proto";
import "stat.proto";

message ObservationRequest {
  // A list of statistical variable DCIDs, or a formula expression.
  datacommons.v2.DcidOrExpression variable = 1;
  // A list of entity DCIDs, or an arrow expression that covers a list of entity
  // DCIDs.
  datacommons.v2.DcidOrExpression entity = 2;
  // Date of the observation
  // - Not specified: all observations are returned
  // - "LATEST": latest obseration of each facet is returned
  // - "<DATE>": a speficied valid ISO 8601 date. Observation corresponding to
  //   this date is returned.
  string date = 3;
  // Value of the observation
  string value = 4;
  // [Optional] filter returned observations by facet
  datacommons.v2.FacetFilter filter = 5;
  // Fields to return, valid values are: "variable", "entity", "date", "value", "facet"
  repeated string select = 6;
}

message ObservationResponse {
  // Keyed by variable DCID
  map<string, datacommons.v2.VariableObservation> by_variable = 1;
  // Keyed by facet ID
  map<string, datacommons.Facet> facets = 2;
}